<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:id="@+id/testingMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginBottom="100dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="Menu"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_profile_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:backgroundTint="#D9534F"
                android:text="Delete Profile"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            app:contentPadding="20dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Profile"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/black"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/profile_edit_button"
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:text="Edit"
                        android:padding="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:visibility="visible"
                        />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/profile_save_button"
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:text="Save"
                        android:padding="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:visibility="gone"
                        />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/profile_cancel_button"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="Cancel"
                        android:padding="0dp"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/profile_save_button"
                        android:visibility="gone"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Name:"
                        android:textSize="20sp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name_textfield"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="Donald John Smith"
                            android:enabled="false"
                            android:textColor="@color/black"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Email:"
                        android:textSize="20sp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_textfield"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="Donald@gmail.com"
                            android:enabled="false"
                            android:textColor="@color/black"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Phone Number (Optional):"
                        android:textSize="20sp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phone_number_textfield"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="911"
                            android:enabled="false"
                            android:textColor="@color/black"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Send Notifications"
                        android:textSize="20sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/send_notifications_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:enabled="false"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="App Mode:"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/app_mode_button_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:singleSelection="true"
                app:selectionRequired="true"
                >
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/organizer_mode_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="Organizer"
                    style="?materialButtonOutlinedStyle"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/user_mode_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="User"
                    style="?materialButtonOutlinedStyle"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/admin_mode_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="Admin"
                    android:visibility="gone"
                    style="?materialButtonOutlinedStyle"/>
            </com.google.android.material.button.MaterialButtonToggleGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/admin_signin_button"
            android:text="Admin Sign In"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>