<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/adminHomeFragment"
        android:icon="@drawable/ic_home"
        android:title="Home" />
    <item
        android:id="@+id/adminEventsFragment"
        android:icon="@drawable/ic_events"
        android:title="Events" />
    <item
        android:id="@+id/adminProfilesFragment"
        android:icon="@drawable/ic_person"
        android:title="Profiles" />
    <item
        android:id="@+id/MenuFragment"
        android:icon="@drawable/ic_settings"
        android:title="Settings" />
</menu>